PO Updates Verify Approval Budgeting
Signed-off-by: charot-git <gamingandrei06@gmail.com>

--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -239,3 +239,9 @@
 .toggle-button:selected {
     -fx-background-color: #008CBA; /* Background color when selected */
 }
+.date-picker .arrow-button {
+	-fx-background-color: transparent;
+}
+.date-picker{
+ -fx-background-color: transparent;
+}
