--- a/src/main/resources/com/vertex/vos/assetsEquipmentsRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/assetsEquipmentsRegistration.fxml
@@ -1,8 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="contentBackground" stylesheets="@assets/global.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.AssetsEquipmentsController">
-
+<AnchorPane styleClass="contentBackground" stylesheets="@assets/global.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.AssetsEquipmentsController">
+   <children>
+      <VBox alignment="CENTER_LEFT" layoutX="21.0" layoutY="21.0" spacing="30.0" style="-fx-background-color: #f0f0f0;">
+         <children>
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
+               <children>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/assets.png" />
+                     </image>
+                  </ImageView>
+                  <Label style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="New Item" />
+               </children>
+            </HBox>
+            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="text" stylesheets="@assets/style.css">
+               <children>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Item Name" />
+                              <TextField fx:id="item" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Item name" styleClass="text" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox layoutX="40.0" layoutY="75.0" spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Department" />
+                              <ComboBox fx:id="departmentComboBox" editable="true" promptText="Department" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Asignee" />
+                              <ComboBox fx:id="asigneeComboBOx" editable="true" prefWidth="150.0" promptText="Asignee" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox layoutX="40.0" layoutY="71.0" spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Life Span" />
+                              <TextField fx:id="itemLifeSpan" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Life Span" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Cost Per Item" />
+                              <TextField fx:id="costPerItem" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Cost Per Item" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Quantity" />
+                              <TextField fx:id="itemQuantity" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Quantity" styleClass="text" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="175.0" spacing="10.0">
+                     <children>
+                        <HBox alignment="CENTER_LEFT">
+                           <children>
+                              <VBox>
+                                 <children>
+                                    <Label text="Date Acquired" />
+                                    <DatePicker fx:id="dateAcquired" promptText="Date Acquired" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                        <Button fx:id="imageButton" mnemonicParsing="false" text="Select Image">
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Add%20Image.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="button" />
+                              <String fx:value="text-input" />
+                           </styleClass>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_RIGHT">
+                     <children>
+                        <Label fx:id="totalLabel" alignment="TOP_CENTER" styleClass="sub-header" text="Total" />
+                     </children>
+                  </HBox>
+                  <Button fx:id="confirmButton" mnemonicParsing="false" text="Add Item">
+                     <styleClass>
+                        <String fx:value="button" />
+                        <String fx:value="text-input" />
+                     </styleClass>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+               </padding>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+         </padding>
+      </VBox>
+   </children>
 </AnchorPane>
