--- a/src/main/resources/com/vertex/vos/receivingIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/receivingIOperations.fxml
@@ -7,9 +7,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -27,15 +24,15 @@
                   </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
                      <children>
-                        <VBox>
+                        <VBox layoutX="10.0" layoutY="10.0">
                            <children>
-                              <Label fx:id="companyNameLabel1" text="Supplier Name">
+                              <Label text="Purchase Order Number">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <ComboBox fx:id="branch1" editable="true" prefWidth="150.0" />
-                              <Label fx:id="branchErr1" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                              <ComboBox fx:id="poNumberTextField" editable="true" prefWidth="150.0" />
+                              <Label fx:id="poErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
@@ -44,41 +41,13 @@
                         </VBox>
                         <VBox layoutX="10.0" layoutY="10.0">
                            <children>
-                              <Label fx:id="companyNameLabel11" text="Purchase Order Number">
+                              <Label text="Branch">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <ComboBox fx:id="branch11" editable="true" prefWidth="150.0" />
-                              <Label fx:id="branchErr11" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                              <Label fx:id="dateOfFormationLabel" text="Date Received">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <HBox alignment="CENTER_LEFT">
-                                 <children>
-                                    <TextField fx:id="dateBought" minWidth="200.0" prefHeight="500.0" prefWidth="123.0" promptText="Date" styleClass="text" />
-                                    <VBox alignment="CENTER" onMouseClicked="#openCalendarViewOnClick" translateX="-30.0">
-                                       <children>
-                                          <ImageView fx:id="datePickerButton" fitHeight="20.0" fitWidth="20.0">
-                                             <image>
-                                                <Image url="@assets/icons/calendar.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <Label fx:id="dateOfFormationLabel1" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                              <ComboBox fx:id="branchComboBox" editable="true" prefWidth="150.0" />
+                              <Label fx:id="branchErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
@@ -87,14 +56,12 @@
                         </VBox>
                      </children>
                   </HBox>
-                  <TableView minHeight="500.0" stylesheets="@assets/table.css">
+                  <TableView fx:id="productTableView" editable="true" minHeight="500.0" stylesheets="@assets/table.css">
                      <columns>
-                        <TableColumn prefWidth="75.0" text="ID" />
-                        <TableColumn prefWidth="75.0" text="Item Code" />
-                        <TableColumn prefWidth="75.0" text="Item Name" />
-                        <TableColumn prefWidth="75.0" text="Order Quantity" />
-                        <TableColumn prefWidth="75.0" text="Received Quantity" />
-                        <TableColumn prefWidth="75.0" text="Total Cost Received" />
+                        <TableColumn fx:id="productDescription" prefWidth="75.0" text="Description" />
+                        <TableColumn fx:id="productUnit" prefWidth="75.0" text="Unit" />
+                        <TableColumn fx:id="orderedQuantity" prefWidth="75.0" text="Ordered Quantity" />
+                        <TableColumn fx:id="receivedQuantity" prefWidth="75.0" text="Received Quantity" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -102,7 +69,7 @@
                   </TableView>
                   <VBox layoutX="40.0" layoutY="242.0">
                      <children>
-                        <Button fx:id="confirmButton1" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
+                        <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
                            <styleClass>
                               <String fx:value="button" />
                               <String fx:value="text-input" />
