--- a/src/main/resources/com/vertex/vos/customerRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/customerRegistration.fxml
@@ -4,6 +4,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -314,9 +315,24 @@
                         </Label>
                      </children>
                   </VBox>
+                  <VBox layoutX="487.0" layoutY="10.0">
+                     <children>
+                        <Label text="Store Type">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ComboBox fx:id="storeTypeComboBox" editable="true" prefWidth="150.0" />
+                        <Label fx:id="storeTypeErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
-            <HBox>
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <VBox>
                      <children>
@@ -333,6 +349,8 @@
                         </Label>
                      </children>
                   </VBox>
+                  <CheckBox fx:id="isVat" mnemonicParsing="false" text="isVat?" />
+                  <CheckBox fx:id="isWithholding" mnemonicParsing="false" text="isWithholding?" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
