--- a/src/main/resources/com/vertex/vos/salesOrderIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/salesOrderIOperations.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -67,15 +67,15 @@
                                     </Label>
                                  </children>
                               </VBox>
-                              <VBox fx:id="customerBox1" layoutX="10.0" layoutY="10.0">
+                              <VBox fx:id="salesmanBox" layoutX="10.0" layoutY="10.0">
                                  <children>
                                     <Label text="Salesman Name">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ComboBox fx:id="customer1" editable="true" prefWidth="150.0" />
-                                    <Label fx:id="customerErr1" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                    <ComboBox fx:id="salesman" editable="true" prefWidth="150.0" />
+                                    <Label fx:id="salesmanErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
@@ -84,36 +84,6 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <VBox fx:id="addBoxes">
-                           <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </VBox.margin>
-                           <children>
-                              <HBox alignment="CENTER_LEFT" spacing="10.0">
-                                 <children>
-                                    <VBox fx:id="addProductButton">
-                                       <children>
-                                          <HBox alignment="CENTER_LEFT">
-                                             <children>
-                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@assets/icons/Add.png" />
-                                                   </image>
-                                                </ImageView>
-                                                <Label fx:id="addProductLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Select Products" />
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
-                                 <children>
-                                    <VBox fx:id="addBranchButton" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
                      </children>
                      <padding>
                         <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
@@ -123,7 +93,11 @@
                         <URL value="@assets/global.css" />
                      </stylesheets>
                   </VBox>
-                  <TabPane fx:id="branchTabPane" tabClosingPolicy="UNAVAILABLE" />
+                  <TableView editable="true" prefHeight="200.0" prefWidth="200.0" stylesheets="@assets/table.css">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
                   <VBox fx:id="totalVBox" spacing="10.0">
                      <children>
                         <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
