--- a/src/main/resources/com/vertex/vos/employeeDetails.fxml
+++ b/src/main/resources/com/vertex/vos/employeeDetails.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -9,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefWidth="1080.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.EmployeeDetailsController">
+<AnchorPane style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.EmployeeDetailsController">
    <children>
       <VBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -47,30 +50,122 @@
                   </HBox>
                   <HBox spacing="10.0">
                      <children>
-                        <TextField fx:id="fname" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="First Name" styleClass="text" />
-                        <TextField fx:id="mname" editable="false" layoutX="10.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Middle Name" styleClass="text" />
-                        <TextField fx:id="lname" editable="false" layoutX="220.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Last Name" styleClass="text" />
+                        <VBox>
+                           <children>
+                              <Label text="First Name" />
+                              <TextField fx:id="fname" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="First Name" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Middle Name" />
+                              <TextField fx:id="mname" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Middle Name" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Last Name" />
+                              <TextField fx:id="lname" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Last Name" styleClass="text" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                   <HBox layoutX="40.0" layoutY="71.0" spacing="10.0">
                      <children>
-                        <TextField fx:id="province" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Province" styleClass="text" />
-                        <TextField fx:id="city" editable="false" layoutX="10.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="City" styleClass="text" />
-                        <TextField fx:id="brgy" editable="false" layoutX="220.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Brgy" styleClass="text" />
+                        <VBox>
+                           <children>
+                              <Label text="Province" />
+                              <ComboBox fx:id="province" editable="true" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="City" />
+                              <ComboBox fx:id="city" editable="true" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Baranggay" />
+                              <ComboBox fx:id="brgy" editable="true" prefWidth="150.0" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                   <HBox layoutX="40.0" layoutY="121.0" spacing="10.0">
                      <children>
-                        <TextField fx:id="contact" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Contact" styleClass="text" />
-                        <TextField fx:id="email" editable="false" layoutX="10.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="E-mail" styleClass="text" />
-                        <TextField fx:id="department" editable="false" layoutX="220.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Department" styleClass="text" />
+                        <VBox>
+                           <children>
+                              <Label text="Contact" />
+                              <TextField fx:id="contact" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Contact" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="E-mail" />
+                              <TextField fx:id="email" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="E-mail" styleClass="text" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                   <HBox spacing="10.0">
                      <children>
-                        <TextField fx:id="tin" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="TIN" styleClass="text" />
-                        <TextField fx:id="sss" editable="false" layoutX="10.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="SSS" styleClass="text" />
-                        <TextField fx:id="philHealth" editable="false" layoutX="220.0" layoutY="10.0" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="PhilHealth" styleClass="text" />
+                        <VBox>
+                           <children>
+                              <Label text="Department" />
+                              <ComboBox fx:id="department" editable="true" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Position" />
+                              <TextField fx:id="positionTextField" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="Last Name" styleClass="text" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
+                  <HBox spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="TIN" />
+                              <TextField fx:id="tin" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="TIN" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="SSS" />
+                              <TextField fx:id="sss" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="SSS" styleClass="text" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="PhilHealth" />
+                              <TextField fx:id="philHealth" editable="false" minWidth="200.0" prefHeight="500.0" prefWidth="500.0" promptText="PhilHealth" styleClass="text" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Birthday" />
+                              <DatePicker fx:id="birthday" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Date Hired" />
+                              <DatePicker fx:id="dateHired" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="confirm" mnemonicParsing="false" styleClass="text-input" text="Confirm" />
                      </children>
                   </HBox>
                </children>
